<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_novela_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="5dp"
    android:background="@drawable/item_background">

    <TextView
        android:id="@+id/nombre_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/descripcion_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_description_label"
        android:textSize="16sp"
        android:layout_below="@id/nombre_evento"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/precio_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descripcion_evento"
        android:text="@string/event_price_label"
        android:textSize="16sp"
        android:textColor="@color/black"/>
</RelativeLayout>